--- a/about/index.html
+++ b/about/index.html
@@ -94,7 +94,7 @@
 <meta name="description" content="一句话介绍专注于Android开发的码农">
 <meta property="og:type" content="website">
 <meta property="og:title" content="iSSExplorer&#39;s Blog">
-<meta property="og:url" content="http://issexplorer.com/about/index.html">
+<meta property="og:url" content="http://issexplorer.com/Blog/about/index.html">
 <meta property="og:site_name" content="iSSExplorer&#39;s Blog">
 <meta property="og:description" content="一句话介绍专注于Android开发的码农">
 <meta property="og:locale" content="zh-Hans">
@@ -131,7 +131,7 @@
 
 
 
-  <link rel="canonical" href="http://issexplorer.com/about/"/>
+  <link rel="canonical" href="http://issexplorer.com/Blog/about/"/>
 
 
 
