--- a/index.html
+++ b/index.html
@@ -1197,6 +1197,10 @@ m-n位的数字：^\d{m,n}$
 
 
 
+  
+    <script id="cy_cmt_num" src="https://changyan.sohu.com/upload/plugins/plugins.list.count.js?clientId=cytg71vQa"></script>
+  
+
 
 
 
