--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,7 @@
 <meta name="description" content="一句话介绍专注于Android开发的码农">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Mr.搞不定的笔记">
-<meta property="og:url" content="http://notes.issexplorer.com/about/index.html">
+<meta property="og:url" content="http://yoursite.com/about/index.html">
 <meta property="og:site_name" content="Mr.搞不定的笔记">
 <meta property="og:description" content="一句话介绍专注于Android开发的码农">
 <meta property="og:locale" content="zh-Hans">
@@ -159,7 +159,7 @@
 
 
 
-  <link rel="canonical" href="http://notes.issexplorer.com/about/"/>
+  <link rel="canonical" href="http://yoursite.com/about/"/>
 
 
 
