--- a/baidu_verify_7ieBAYm8fq.html
+++ b/baidu_verify_7ieBAYm8fq.html
@@ -111,8 +111,6 @@
 
 
 
-  
-
 
   <link rel="alternate" href="/rss.xml" title="Mr.搞不定的笔记" type="application/atom+xml" />
 
@@ -124,7 +122,7 @@
 <meta name="description" content="7ieBAYm8fq">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Mr.搞不定的笔记">
-<meta property="og:url" content="http://notes.issexplorer.com/baidu_verify_7ieBAYm8fq.html">
+<meta property="og:url" content="http://yoursite.com/baidu_verify_7ieBAYm8fq.html">
 <meta property="og:site_name" content="Mr.搞不定的笔记">
 <meta property="og:description" content="7ieBAYm8fq">
 <meta property="og:locale" content="zh-Hans">
@@ -161,7 +159,7 @@
 
 
 
-  <link rel="canonical" href="http://notes.issexplorer.com/baidu_verify_7ieBAYm8fq.html"/>
+  <link rel="canonical" href="http://yoursite.com/baidu_verify_7ieBAYm8fq.html"/>
 
 
 
@@ -766,7 +764,7 @@
     
       <script type="text/javascript">
         var disqus_config = function () {
-          this.page.url = 'http://notes.issexplorer.com/baidu_verify_7ieBAYm8fq.html';
+          this.page.url = 'http://yoursite.com/baidu_verify_7ieBAYm8fq.html';
           this.page.identifier = 'baidu_verify_7ieBAYm8fq.html';
           this.page.title = '';
         };
