--- a/404.html
+++ b/404.html
@@ -111,8 +111,6 @@
 
 
 
-  
-
 
   <link rel="alternate" href="/notes/rss.xml" title="Mr.搞不定的笔记" type="application/atom+xml" />
 
@@ -783,7 +781,7 @@
           this.page.title = '';
         };
         var d = document, s = d.createElement('script');
-        s.src = 'https://RogersCj.disqus.com/embed.js';
+        s.src = 'https://rogerscj.disqus.com/embed.js';
         s.setAttribute('data-timestamp', '' + +new Date());
         (d.head || d.body).appendChild(s);
       </script>
